--- a/htmlcode.html
+++ b/htmlcode.html
@@ -8,9 +8,10 @@
 </head>
 <body>
   <p>hello changes</p>
-  <p> hdshgudsw </p>
-  <p>hwiquiuwqiu</p>
-
-  <P>uhwi</P>
+  <ul>
+    cat
+    dog
+    bird
+  </ul>
 </body>
 </html>
