--- a/htmlcode.html
+++ b/htmlcode.html
@@ -9,9 +9,11 @@
 <body>
   <p>hello changes</p>
   <ul>
-    cat
-    dog
-    bird
+    <li>dog</li>
+    <li>cat</li>
+    <li>bird</li>
+    
+    
   </ul>
 </body>
 </html>
