--- a/htmlcode.html
+++ b/htmlcode.html
@@ -7,13 +7,14 @@
   <link />
 </head>
 <body>
+  
   <p>hello changes</p>
   <ul>
     <li>dog</li>
     <li>cat</li>
     <li>bird</li>
-    
-    
   </ul>
+  <P id="currenttime"></P>   
+  
 </body>
 </html>
