--- a/dress shop.html
+++ b/dress shop.html
@@ -23,8 +23,8 @@
     </header>
 
     <section id="about">
-        <h2>About Us</h2>
-        <p>Welcome to koshmochon Store, your one-stop destination for premium men's clothing. We offer stylish and elegant outfits that enhance your personality.</p>
+        <h2>INTO THE FASHION SEA</h2>
+        <p><b></b>Welcome to koshmochon Store, your one-stop destination for premium men's clothing. We offer stylish and elegant outfits that enhance your personality.</p>
     </section>
 
     <section id="products">
