--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <center>
-    <img src="store.jpeg" alt="Koshmochon" height="400px" width="800px">
+    <img src="store.jpg" alt="Koshmochon" height="400px" width="800px">
     </center>
     <section>
         <h2>Get in Touch</h2>
