--- a/product.html
+++ b/product.html
@@ -4,5 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>PRODUCTS</title>
-        <link rel="stylesheet" href="style.css">
 </head>
+<body>
+    <center><h1 style="background-color: bisque; padding: 30px;"><b>OUR BEST CUSTOM PROJECTS</b></h1></center>
+    <div class="product-container">
+        <div class="product">
+
+            <left><img src="gold.jpg" alt="gold dress"></left>
+            <h2><b>24k gold dress</b></h2>
+</body>
